--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 	<meta charset="UTF-8">
 	<title>Bio-Trio</title>
 	<link rel="stylesheet" href="style.css">
+	<base target="_blank">
 	
 </head>
 <body>
-<h1>Фермерське господарство "Біо-Тріо"</h1>
+<h1>Фермерське господарство<br> "Біо-Тріо"</h1>
 
 <ul>
-	<li>Головна сторінка</li>
-	<li>Види діяльності</li>
-	<li>Продукція господарства</li>
-	<li>Галерея</li>
-	<li>Цікаво знати</li>
-	<li>Контакти та місцезнаходження </li>
+	
+	<a href="" target=""><li>Головна сторінка</li></a>	
+	<a href=""><li>Види діяльності</li></a>
+	<a href=""><li>Продукція господарства</li></a>
+	<a href=""><li>Галерея</li></a>
+	<a href=""><li>Цікаво знати</li></a>
+	<a href=""><li>Контакти та місцезнаходження </li></a>
 </ul>
 	
 </body>
