--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Bio-Trio</title>
 	<link rel="stylesheet" href="style.css">
-	<base target="_blank">
+<!--	<base target="_blank">-->
 	
 </head>
 <body>
@@ -12,7 +12,7 @@
 
 <ul>
 	
-	<a href="" target=""><li>Головна сторінка</li></a>	
+	<a href=""><li>Головна сторінка</li></a>	
 	<a href=""><li>Види діяльності</li></a>
 	<a href=""><li>Продукція господарства</li></a>
 	<a href=""><li>Галерея</li></a>
